--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "date": "Tue Feb 04 07:47:01 CET 2020",
+    "date": "Thu Feb 06 08:56:54 UTC 2020",
     "name": "DeFilippis",
     "format": "xml",
     "description": "",
