--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
   <description>Simplicite module: DeFilippis</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <simplicite.url>https://j8f84e4953.demo.simplicite.io</simplicite.url>
-    <simplicite.version>4.0.P25a-SNAPSHOT</simplicite.version>
+    <simplicite.url>http://52.59.252.7:81</simplicite.url>
+    <simplicite.version>4.0.P24</simplicite.version>
     <maven.compiler.source>13</maven.compiler.source>
     <maven.compiler.target>13</maven.compiler.target>
     <sonar.sources>src,resources</sonar.sources>
