--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ sourceSets {
 
 repositories {
     maven {
-        url = 'https://simplicite.mineralconseil.fr/maven'
+        url = 'http://18.157.188.27:81/maven'
     }
     mavenCentral()
 }
@@ -27,6 +27,7 @@ sourceCompatibility = '14'
 
 dependencies {
     compile 'com.simplicite:simplicite-api:4.0.P24'
+    compile 'com.simplicite:simplicite-api:4.0.P24:javadoc'
 }
 
 tasks.withType(JavaCompile) {
